Major Token Restructuring
